--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,13 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
+elevenlabs-convai {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
